Completed 22-checkout exercise

--- a/week-3/22-checkout/index.html
+++ b/week-3/22-checkout/index.html
@@ -37,8 +37,16 @@
         <div class="checkout">
           <h2 class="checkout__title">Checkout</h2>
           <form method="GET" id="checkout-form" class="checkout__form">
-            <!-- Add the form fields here -->
-
+            <div>
+              <p>
+                Name:
+                <input type="text" name="customer-name" />
+                Email:
+                <input type="email" name="customer-email" />
+                Phone:
+                <input type="tel" name="customer-phone" />
+              </p>
+            </div>
             <button type="submit">Complete Purchase</button>
           </form>
         </div>
