--- a/week-3/24-dietary/index.html
+++ b/week-3/24-dietary/index.html
@@ -19,7 +19,30 @@
         </p>
 
         <form>
-          <!-- Your multiple choice goes here -->
+          <fieldset>
+            <legend>Please select all your dietary requirements</legend>
+
+            <label>
+              <input type="checkbox" name="dietary" />
+              Halal </label
+            ><br />
+            <label>
+              <input type="checkbox" name="dietary" />
+              Kosher </label
+            ><br />
+            <label>
+              <input type="checkbox" name="dietary" />
+              Vegetarian </label
+            ><br />
+            <label>
+              <input type="checkbox" name="dietary" />
+              Vegan </label
+            ><br />
+            <label>
+              <input type="checkbox" name="dietary" />
+              Gluten Free
+            </label>
+          </fieldset>
           <button type="submit">Submit</button>
         </form>
       </main>
