Completed 25-shirt-size exercise

--- a/week-3/25-shirt-size/index.html
+++ b/week-3/25-shirt-size/index.html
@@ -25,11 +25,17 @@
               <td>
                 <div class="shopping-basket__product">
                   <img src="/images/22/shirts.jpg" alt="Codi t-shirts in black" />
-                  <p>Codi t-shirt, black</p>
+                  <p>CodeYourFuture t-shirt, black</p>
                 </div>
               </td>
               <td>
-                Medium
+                <form>
+                  <select name="Size">
+                    <option value="small">Small</option>
+                    <option value="medium" selected>Medium</option>
+                    <option value="large">Large</option>
+                  </select>
+                </form>
               </td>
               <td>
                 1
