--- a/week-3/29-combined-skills/about.html
+++ b/week-3/29-combined-skills/about.html
@@ -11,9 +11,9 @@
 
   <body>
     <div class="site-wrapper">
-      <div class="site-header">
-        <h1 class="site-header__title">C.Y.F</h1>
-        <div class="main-nav">
+      <header class="site-header">
+        <h1 class="site-header__title">Codi</h1>
+        <nav class="main-nav">
           <ul class="main-nav__list">
             <li class="main-nav__list-item">
               <a href="index.html">Latest</a>
@@ -25,7 +25,7 @@
               <a href="contact.html">Contact</a>
             </li>
           </ul>
-        </div>
+        </nav>
         <form class="site-search" action="/search">
           <label for="search-input">
             Search
@@ -47,11 +47,11 @@
           </svg>
           <button type="submit">Submit</button>
         </form>
-      </div>
+      </header>
 
       <main class="site-content">
         <article class="main-article">
-          <h1>About C.Y.F</h1>
+          <h1>About Codi</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua. Suspendisse sed nisi lacus sed viverra
