--- a/week-3/29-combined-skills/contact.html
+++ b/week-3/29-combined-skills/contact.html
@@ -12,9 +12,9 @@
 
   <body>
     <div class="site-wrapper">
-      <div class="site-header">
-        <div class="site-header__title">C.Y.F</div>
-        <div class="main-nav">
+      <header class="site-header">
+        <div class="site-header__title">Codi</div>
+        <nav class="main-nav">
           <ul class="main-nav__list">
             <li class="main-nav__list-item">
               <a href="index.html">Latest</a>
@@ -26,7 +26,7 @@
               <a href="contact.html">Contact</a>
             </li>
           </ul>
-        </div>
+        </nav>
         <form class="site-search" action="/search">
           <label for="search-input">
             Search
@@ -48,7 +48,7 @@
           </svg>
           <button type="submit">Submit</button>
         </form>
-      </div>
+      </header>
 
       <main>
         <h1>Contact Us</h1>
@@ -56,13 +56,31 @@
         <form method="GET" class="contact-form">
           <div class="contact-form__field">
             <label for="name">Name</label>
-            <input type="text" name="name" id="name" />
+            <input type="text" name="name" id="name" required />
           </div>
           <div class="contact-form__field">
+            <label for="email">Email</label>
+            <input type="text" name="email" id="email" required />
+          </div>
+          <div class="contact-form__field">
+            <label for="msg">Message</label>
             <textarea
               name="message"
+              id="msg"
               placeholder="Your message should not be longer than 200 words."
+              required
             ></textarea>
+          </div>
+          <div class="contact-form__field">
+            <fieldset>
+              <legend>What branch are you interested in?</legend>
+              <input type="radio" value="London" />
+              London<br />
+              <input type="radio" value="Glasgow" />
+              Glasgow<br />
+              <input type="radio" value="Manchester" />
+              Manchester<br />
+            </fieldset>
           </div>
           <button type="submit">Send</button>
         </form>
